<resources>
    <string name="app_name">Projemanag</string>

    <string name="image_contentDescription">image</string>
    <string name="let_s_get_started_text">Let\'s Get started</string>
    <string name="intro_text_description">Collaborate and Plan Together Across Multiple Devices on Projemanag’s Minimalist Interface.</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>


    <string name="sign_up_description_text">Enter your name, email id and password, to register with us.</string>

    <string name="name">Name</string>

    <string name="password">Password</string>

    <string name="email">Email</string>
    <string name="sign_in_description_text">Enter your name, email id and password, to signin.</string>
    <string name="please_click_backtoexit">Please click back to exit</string>
    <string name="please_wait">Please Wait</string>
</resources>