<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
    tools:context=".activities.SignUpActivity"
    android:orientation="vertical"
    android:background="@drawable/ic_background"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.appcompat.widget.Toolbar
        android:layout_height="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:id="@+id/toolbar_sign_up_activity">
        <TextView android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:id="@+id/tv_title"
            android:textStyle="bold"
            android:textSize="@dimen/toolbar_title_text_size"
            android:textColor="@color/primary_text_color"
            android:text="@string/sign_up"
            android:gravity="center_vertical"/>

</androidx.appcompat.widget.Toolbar>
    <LinearLayout android:orientation="vertical"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/authentication_screen_content_marginTop"
        android:layout_gravity="center">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textSize="@dimen/authentication_description_text_size"
        android:textColor="@color/secondary_text_color"
        android:text="@string/sign_up_description_text"
        android:gravity="center"
        android:layout_marginEnd="@dimen/authentication_screen_marginStartEnd"
        android:layout_marginStart="@dimen/authentication_screen_marginStartEnd"/>

        <androidx.cardview.widget.CardView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/authentication_screen_card_view_marginTop"
            android:layout_marginEnd="@dimen/authentication_screen_marginStartEnd"
            android:layout_marginStart="@dimen/authentication_screen_marginStartEnd"
            app:cardCornerRadius="@dimen/card_view_corner_radius"
            android:elevation="@dimen/card_view_elevation">


    <LinearLayout
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:padding="@dimen/card_view_layout_content_padding">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginEnd="@dimen/authentication_screen_til_marginStartEnd"
            android:layout_marginStart="@dimen/authentication_screen_til_marginStartEnd">

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/et_name"
        android:textSize="@dimen/et_text_size"
        android:inputType="textEmailAddress"
        android:hint="@string/name"/>

</com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/authentication_screen_til_marginTop"
        android:layout_marginEnd="@dimen/authentication_screen_til_marginStartEnd"
        android:layout_marginStart="@dimen/authentication_screen_til_marginStartEnd">

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/et_email"
        android:textSize="@dimen/et_text_size"
        android:inputType="textEmailAddress"
        android:hint="@string/email"/>

</com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/authentication_screen_til_marginTop"
        android:layout_marginEnd="@dimen/authentication_screen_til_marginStartEnd"
        android:layout_marginStart="@dimen/authentication_screen_til_marginStartEnd">

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/et_password"
        android:textSize="16sp"
        android:inputType="textPassword"
        android:hint="@string/password"/>

</com.google.android.material.textfield.TextInputLayout>

    <Button
        android:background="@drawable/shape_button_rounded"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/btn_sign_up"
        android:textSize="@dimen/btn_text_size"
        android:textColor="@android:color/white"
        android:text="@string/sign_up"
        android:gravity="center"
        android:layout_marginTop="@dimen/sign_up_screen_btn_marginTop"
        android:layout_gravity="center"
        android:layout_marginEnd="@dimen/btn_marginStartEnd"
        android:layout_marginStart="@dimen/btn_marginStartEnd"
        android:paddingBottom="@dimen/btn_paddingTopBottom"
        android:paddingTop="@dimen/btn_paddingTopBottom"
        android:foreground="?attr/selectableItemBackground"/>

</LinearLayout>

</androidx.cardview.widget.CardView>

</LinearLayout>

</LinearLayout>